--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "friendly-errors-webpack-plugin": "^1.1.3",
     "html-webpack-plugin": "^2.28.0",
     "http-proxy-middleware": "^0.17.3",
+    "jquery": "^3.2.1",
     "less": "^2.7.2",
     "less-loader": "^2.2.3",
     "node-sass": "^4.5.3",
