--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "dev": "node build/dev-server.js",
     "start": "node build/dev-server.js",
     "build": "node build/build.js",
-    "lint": "eslint --ext .js,.vue src"
+    "lint": "eslint --ext .js,.vue src",
+    "data": "node build/build-data.js"
   },
   "dependencies": {
     "element-ui": "^1.3.7",
