--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "vue-examplel",
+  "name": "artup-pc",
   "version": "1.0.0",
-  "description": "A Vue.js project",
+  "description": "artup",
   "author": "pengjin0 <827879040@qq.com>",
   "private": true,
   "scripts": {
