--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "chalk": "^1.1.3",
     "connect-history-api-fallback": "^1.3.0",
     "copy-webpack-plugin": "^4.0.1",
+    "crypto-js": "^3.1.9-1",
     "css-loader": "^0.28.4",
     "cube.css": "^1.3.2",
     "eslint": "^3.19.0",
